--- a/governanceCollector/webapp/package.json
+++ b/governanceCollector/webapp/package.json
@@ -33,32 +33,11 @@
         "leonardo-ui": "^1.1.0",
         "lodash": "^4.17.4",
         "ng-dialog": "^1.3.0",
+        "ng-file-upload": "^12.2.13",
         "path": "^0.12.7",
         "socket.io": "^2.0.3",
         "socket.io-client": "^2.0.3",
         "winston": "^2.3.1",
         "winston-daily-rotate-file": "^1.4.6"
-    },
-    "bundledDependencies": [
-        "@uirouter/angularjs",
-        "angular",
-        "angular-bootstrap",
-        "angular-socket-io",
-        "angular-tooltips",
-        "bluebird",
-        "body-parser",
-        "bootstrap",
-        "express",
-        "extend",
-        "http",
-        "jquery",
-        "leonardo-ui",
-        "lodash",
-        "ng-dialog",
-        "path",
-        "socket.io",
-        "socket.io-client",
-        "winston",
-        "winston-daily-rotate-file"
-    ]
+    }
 }
