--- a/installer/package.json
+++ b/installer/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "colors": "^1.1.2",
+    "fs-extra": "^4.0.2",
     "inquirer": "^3.1.1",
     "path": "^0.12.7",
     "qrs-interact": "^2.5.7",
     "tarball-extract": "0.0.6"
   },
   "installer": {
-    "apps": [{
+    "apps": [
+      {
         "appName": "Governance Dashboard for Qlik Sense",
         "taskName": "qsgc-Refresh-Governance-Dashboard"
       },
