--- a/governanceCollector/webapp/package.json
+++ b/governanceCollector/webapp/package.json
@@ -1,43 +1,44 @@
 {
-    "name": "qs-governance-collector-webapp",
-    "version": "1.0.0",
-    "description": "An Angular 1.5 app for running Governance Collection processes using server installed Governance Collector agents.",
-    "main": "qs-governance-collector-webapp",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
-    },
-    "keywords": [
-        "qliksense",
-        "qlik",
-        "sense",
-        "governance",
-        "collector",
-        "powertools"
-    ],
-    "author": "Renato Viera with contributors",
-    "license": "MIT",
-    "dependencies": {
-        "@uirouter/angularjs": "^1.0.4",
-        "angular": "^1.6.4",
-        "angular-bootstrap": "^0.12.2",
-        "angular-socket-io": "^0.7.0",
-        "angular-tooltips": "^1.2.2",
-        "bluebird": "^3.5.0",
-        "body-parser": "^1.17.2",
-        "bootstrap": "^3.3.7",
-        "express": "^4.15.3",
-        "extend": "^3.0.1",
-        "http": "0.0.0",
-        "jquery": "^3.2.1",
-        "leonardo-ui": "^1.1.0",
-        "lodash": "^4.17.4",
-        "ng-dialog": "^1.3.0",
-        "ng-file-upload": "^12.2.13",
-        "path": "^0.12.7",
-        "socket.io": "^2.0.3",
-        "socket.io-client": "^2.0.3",
-        "winston": "^2.3.1",
-        "winston-daily-rotate-file": "^1.4.6"
-    }
+  "name": "qs-governance-collector-webapp",
+  "version": "1.0.0",
+  "description": "An Angular 1.5 app for running Governance Collection processes using server installed Governance Collector agents.",
+  "main": "qs-governance-collector-webapp",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [
+    "qliksense",
+    "qlik",
+    "sense",
+    "governance",
+    "collector",
+    "powertools"
+  ],
+  "author": "Renato Viera with contributors",
+  "license": "MIT",
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.4",
+    "angular": "^1.6.4",
+    "angular-bootstrap": "^0.12.2",
+    "angular-socket-io": "^0.7.0",
+    "angular-tooltips": "^1.2.2",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
+    "express": "^4.15.3",
+    "extend": "^3.0.1",
+    "http": "0.0.0",
+    "jquery": "^3.2.1",
+    "leonardo-ui": "^1.1.0",
+    "lodash": "^4.17.4",
+    "ng-dialog": "^1.3.0",
+    "ng-file-upload": "^12.2.13",
+    "path": "^0.12.7",
+    "qrs-interact": "^3.0.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
+  }
 }
